--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
@@ -6,13 +6,16 @@
 </head>
 <body>
     <div ng-controller="chatController">
-        <input type="text" id="message" autofocus required ng-model="message" />
-        <input type="button" id="sendmessage" value="Send" />
-        <!--<input type="hidden" id="displayname" />-->
-        <ul id="allMessages">            
+        <form ng-submit="sendMessage()">
+            <input type="text" id="message" autofocus required ng-model="message" />
+            <input type="submit" value="Send" />
+        </form>
+
+        <ul>
             <li ng-repeat="post in posts">{{post.name}} : {{post.message}}</li>
         </ul>
     </div>
+
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/signalr/jquery.signalr.js"></script>
     <!-- this is very important!! this is how signalr glue up!!!!!! -->
