Move chatHub logic to messageService

--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
@@ -23,5 +23,6 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="app.js"></script>
+    <script src="messages/messageservice.js"></script>
 </body>
 </html>
