--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <div ng-controller="chatController">
+    <!--<div ng-controller="chatController">
         <form ng-submit="sendMessage()">
             <input type="text" id="message" autofocus required ng-model="message" />
             <input type="submit" value="Send" />
@@ -14,7 +14,8 @@
         <ul>
             <li ng-repeat="post in posts">{{post.name}} : {{post.message}}</li>
         </ul>
-    </div>
+    </div>-->
+    <div ng-view></div>
 
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/signalr/jquery.signalr.js"></script>
@@ -22,7 +23,9 @@
     <script src='signalr/js'></script>
 
     <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="messages/messageservice.js"></script>
+    <script src="messages/messagecontroller.js"></script>
 </body>
 </html>
