--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/wwwroot/index.html
@@ -5,16 +5,6 @@
     <title></title>
 </head>
 <body>
-    <!--<div ng-controller="chatController">
-        <form ng-submit="sendMessage()">
-            <input type="text" id="message" autofocus required ng-model="message" />
-            <input type="submit" value="Send" />
-        </form>
-
-        <ul>
-            <li ng-repeat="post in posts">{{post.name}} : {{post.message}}</li>
-        </ul>
-    </div>-->
     <div ng-view></div>
 
     <script src="lib/jquery/dist/jquery.js"></script>
@@ -24,6 +14,7 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-signalr-hub/signalr-hub.js"></script>
     <script src="app.js"></script>
     <script src="messages/messageservice.js"></script>
     <script src="messages/messagecontroller.js"></script>
